# activity

./: .gitignore  Readme.md  index.html
assets/: index-BTMjeohC.js  index-DPBM6CWi.css  index-OgfKI-fm.css  index-cQZJx3hh.js
data/: calls.history.summary.json  health.history.summary.json  psych.history.summary.json  youtube.watch.summary.json  ytmusic.search.summary.json  ytmusic.watch.summary.json
scripts/: Justfile  pyproject.toml
scripts/iphone/: Readme.md  call_history.py  health.py  whatsapp.py
scripts/music/: Readme.md  cluster_search_queries.py  summarize_queries.py  summarize_search.py
scripts/photos/: Readme.md  dates.js
scripts/trakt/: Readme.md  collect.py  summarize.py
scripts/youtube/: summarize_watch.py
ui/: Justfile  Readme.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/public/data/: googlephotos.summary.json  trakt.history.summary.json  whatsapp.history.summary.json  youtube.search.summary.json
ui/src/: App.vue  router.ts  style.css
ui/src/components/: CallsHeatmaps.vue  GenresWordclouds.vue  GooglePhotosHeatmaps.vue  MonthlyWordcloud.vue  TraktHeatmaps.vue  WhatsAppHeatmaps.vue  YTMusicHeatmaps.vue  YearHeatmap.vue  YouTubeHeatmaps.vue
ui/src/pages/: Calls.vue  GooglePhotos.vue  Home.vue  Trakt.vue  WhatsApp.vue  YTMusic.vue  Youtube.vue
ui/src/services/: callsData.ts  googlePhotosData.ts  healthData.ts  traktGenreAggregation.ts  traktRuntimeData.ts  whatsappData.ts  ytmusicData.ts
ui/src/types/: cal-heatmap.d.ts  calls.ts  googlephotos.ts  health.ts  trakt.ts  vuewordcloud.d.ts  whatsapp.ts  ytmusic.ts
